--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 
     <section id="step12">
       <h2>Step 1 and 2</h2>
-      <button id="first">"Run AJAX Request to Root"</button>
+      <button id="first">Run AJAX Request to Root</button>
     </section>
 
     <section id="step3456">
       <h2>Step 3, 4, 5, 6</h2>
-      <button id="second">"Run AJAX Request to Ping/Pong"</button>
+      <button id="second">Run AJAX Request to Ping/Pong</button>
     </section>
 
     <section id="step7">
       <h2>Step 7</h2>
+      <button id="count">Run AJAX Request to Count</button>
     </section>
 
     <section id="step8">
