--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
     <section id="step9">
       <h2>Step 9</h2>
+      <button id="car">Run AJAX Request to A Car</button>
+      <ul id="carlist"></ul>
     </section>
 
   </body>
